# CS236-InterpreterProject

./: Automaton.h  Book.cpp  BookCreator.cpp  CMakeLists.txt  Lexer.h  Library.cpp  MatcherAutomaton.h  README.md  Token.h
CS236CoolProject/: AddAutomaton.h  Automaton.h  BlockComment.h  CMakeLists.txt  ColonAutomaton.h  ColonDashAutomaton.h  CommaAutomaton.h  Database.h  DatalogProgram.h  FactsAutomaton.h  Graph.h  Header.h  IDAutomaton.h  Interpreter.h  LeftParenAutomaton.h  Lexer.h  LineCommentAutomaton.h  MatcherAutomaton.h  MultiplyAutomaton.h  Parameter.h  Parser.h  PeriodAutomaton.h  Predicate.h  Queries.h  QuestionMarkAutomaton.h  Relation.h  RightParenAutomaton.h  Rule.h  RulesAutomaton.h  Schemes.h  StringAutomaton.h  Token.h  Tuple.h  UndefinedAutomaton.h  in.txt  lab1  lab4  lab5  main.cpp  matcherTest.txt
Project0/: Book.cpp  BookCreator.cpp  CMakeLists.txt  Library.cpp
